--- a/Loops and String/index.html
+++ b/Loops and String/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index.html"></script>
+    <script src="practice.js"></script>
 </body>
 </html>
