deleted the practice.js file

--- a/dom/index.html
+++ b/dom/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <h1>Welcome to our page</h1>
+    <h4>Topic1 : Starter Code</h4>
+    <p>Let's learn about DOM concepts in detail</p>
+    <button>Click me!</button>
+
+
     <script src="dom.js"></script>
-    <script src="practice.js"></script>
 </body>
 </html>
