--- a/dom/index.html
+++ b/dom/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to our page</h1>
     <h4>Topic1 : Starter Code</h4>
     <p>Let's learn about DOM concepts in detail</p>
-    <button>Click me!</button>
+    <button class="button">Click me!</button>
 
 
     <script src="dom.js"></script>
