added append methods

--- a/Dom2/index.html
+++ b/Dom2/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="box"></div>
+    <div id="box">Welcome</div>
     <script src="dom2.js"></script>
 </body>
 </html>
