--- a/dom/index.html
+++ b/dom/index.html
@@ -7,11 +7,20 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="header">
     <h1>Welcome to our page</h1>
-    <h4>Topic1 : Starter Code</h4>
+    <h4 class="topic">Topic1 : Starter Code</h4>
     <p>Let's learn about DOM concepts in detail</p>
     <button class="button">Click me!</button>
-
+    </div>
+    <div id="two">
+        <h3>Fruits</h3>
+        <ul>
+            <li>Mango</li>
+            <li>Apple</li>
+            <li>Banana</li>
+        </ul>
+    </div>
 
     <script src="dom.js"></script>
 </body>
