--- a/dom/index.html
+++ b/dom/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header">
+    <h1 id="lala">Welcome to our page</h1>
+    <div class="divdiv">haha</div>
+    <div class="divdiv">hoho</div>
+    <div class="divdiv">hihi</div>
+   <!----> <!--<div class="header">
     <h1>Welcome to our page</h1>
     <h4 class="topic">Topic1 : Starter Code</h4>
     <p>Let's learn about DOM concepts in detail</p>
@@ -21,7 +25,7 @@
             <li>Banana</li>
         </ul>
     </div>
-
+-->
     <script src="dom.js"></script>
 </body>
 </html>
