--- a/Dom2/index.html
+++ b/Dom2/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p class="content">I am a paragraph</p>
     <div></div>
     <script src="dom2.js"></script>
 </body>
