--- a/events/index.html
+++ b/events/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btn1">click me!</button><br>
-    <button id="btn2">Click me twice</button>
-    <div class="box">This is a box</div>
+    <button class="btn1">click me!</button><br>
+    <!--<button id="btn2">Click me twice</button>
+    <div class="box">This is a box</div>-->
     <script src="events.js"></script>
 </body>
 </html>
