--- a/events/index.html
+++ b/events/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="btn1">click me!</button><br>
+    <button class="btn1">Light</button><br>
+    <button class="btn2">Dark</button>
     <!--<button id="btn2">Click me twice</button>
     <div class="box">This is a box</div>-->
     <script src="events.js"></script>
