--- a/rockpaperscissors/index.html
+++ b/rockpaperscissors/index.html
@@ -26,7 +26,9 @@
               <p>Comp</p>
             </div>
           </div>
-      
+      <div class="msgg">
+        <p class="msg">You will see the game activies here</p>
+      </div>
     </section>
 <script src="app.js"></script>
 </body>
